tests/01-syntax/inv_exception.ml.reference
File "inv_exception.ml", line 1, characters 29-30:
Error: This expression has type int but an expression was expected of type
         exn
