tests/01-syntax/inv_exception.ml
let () = LOG "msg" EXCEPTION 0 LEVEL DEBUG
